note.html nidalar elave olunub

--- a/note.html
+++ b/note.html
@@ -5,7 +5,7 @@
 <meta charset=" UTF-8"  
 </head>
 <body>
-    Я пишу текст для себя
+    Я пишу текст для себя!!!
 <h1> Long history 1 </h1>
 <h2> Long history 2 </h2>
 <p id="ideveloper"> Текст внутри <br> тега </p>
