note.html elave (1),(2) test.txt gondermishem

--- a/note.html
+++ b/note.html
@@ -16,8 +16,8 @@
 <a href="#ideveloper"> Yakor </a>
 
 <ul>
-<li> Первый элемент списка </li>
-<li> Второй элемент списка </li>
+<li> Первый элемент списка (1) </li>
+<li> Второй элемент списка (2) </li>
 <li> <a href="https://www.w3schools.com/html/default.asp"> W3SCHOOLS </a> ссылка на учебник </a> </li>
 </ul>
 <hr>
